--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "@vuepress/plugin-git": "^2.0.0-beta.36",
-    "@vuepress/plugin-register-components": "^2.0.0-beta.35",
     "@vuepress/plugin-search": "^2.0.0-beta.35",
     "vuepress": "^2.0.0-beta.36",
     "vuepress-theme-hope": "^2.0.0-beta.24"
+  },
+  "dependencies": {
+    "naive-ui": "^2.27.0"
   }
 }
