--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -1,33 +1,47 @@
-name: Deploy GitHub Page
+name: Deplay github pages
 
 on:
+  # 每当 push 到 main 分支时触发部署
   push:
-    branches:
-      - main
+    branches: [main]
+  # 手动触发部署
+  workflow_dispatch:
 
 jobs:
-  docs-deploy:
+  docs:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         with:
+          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
           fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
+          # 选择要使用的 node 版本
           node-version: "16"
 
-      - name: Install dependencies
-        run: yarn
+      # 缓存 node_modules
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
+      # 如果缓存没有命中，安装依赖
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile
+
+      # 运行构建脚本
       - name: Build VuePress site
         run: yarn docs:build
-
-      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           BRANCH: gh-pages
