--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -42,6 +42,7 @@ jobs:
       # 运行构建脚本
       - name: Build VuePress site
         run: yarn docs:build
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           BRANCH: gh-pages
