--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "docs:dev": "vuepress dev docs  "
   },
   "devDependencies": {
-    "@vuepress/plugin-git": "^2.0.0-beta.36",
-    "@vuepress/plugin-search": "^2.0.0-beta.35",
-    "vuepress": "^2.0.0-beta.36",
-    "vuepress-theme-hope": "^2.0.0-beta.24"
+    "@vuepress/plugin-git": "next",
+    "@vuepress/plugin-search": "next",
+    "vuepress": "next",
+    "vuepress-theme-hope": "next"
   },
   "dependencies": {
     "naive-ui": "^2.27.0"
