--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuepress-theme-hope": "next"
   },
   "dependencies": {
-    "naive-ui": "^2.27.0"
+    "naive-ui": "^2.27.0",
+    "axios": "latest"
   }
 }
