--- a/.github/workflows/github_to_gitee.yml
+++ b/.github/workflows/github_to_gitee.yml
@@ -1,25 +1,33 @@
-name: Github to gitee
+name: Sync pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  docs-deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Sync to Gitee
+        uses: wearerequired/git-mirror-action@master
+        env:
+          # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
         with:
-          fetch-depth: 0
-      - name: Mirror the Github organization repos to Gitee.
-        uses: Yikun/hub-mirror-action@master
+          # 注意替换为你的 GitHub 源仓库地址
+          source-repo: git@github.com:yzqdev/cs-guide.git
+          # 注意替换为你的 Gitee 目标仓库地址
+          destination-repo: git@gitee.com:yzqdev/cs-guide.git
+
+      - name: Build Gitee Pages
+        uses: yanglbme/gitee-pages-action@main
         with:
-          src: github/yzqdev
-          dst: gitee/yzqdev
-          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-          dst_token: ${{ secrets.GITEE_TOKEN }}
-          static_list: "cs-guide"
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: yzqdev
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITEE_TOKEN }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: yzqdev/cs-guide
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: gh-pages
