--- a/.github/workflows/github_to_gitee.yml
+++ b/.github/workflows/github_to_gitee.yml
@@ -1,9 +1,10 @@
 name: Sync pages
 
 on:
-  push:
-    branches: [gh-pages]
-  workflow_dispatch:
+  workflow_run:
+    workflows: [Deploy GitHub Page]
+    types:
+      - completed
 
 jobs:
   build:
