--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "docs:dev": "vuepress dev docs  "
   },
   "devDependencies": {
-    "@vuepress/plugin-search": "next",
-    "vuepress": "next",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.38",
+    "vuepress": "2.0.0-beta.38",
     "vuepress-theme-hope": "next"
   },
   "dependencies": {
