--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "pc documents",
   "license": "MIT",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs  "
+    "docs:webpack": "vuepress-webpack  build docs",
+    "docs:build": "vuepress-vite  build docs",
+    "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
+    "docs:dev": "vuepress-vite dev docs  "
   },
   "devDependencies": {
     "@vuepress/plugin-docsearch": "2.0.0-beta.38",
-    "vuepress": "2.0.0-beta.38",
+    "vuepress-vite": "2.0.0-beta.38",
+    "vuepress-webpack": "2.0.0-beta.38",
     "vuepress-theme-hope": "next"
   },
   "dependencies": {
