--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@vuepress/plugin-docsearch": "2.0.0-beta.38",
     "vuepress-vite": "2.0.0-beta.38",
     "vuepress-webpack": "2.0.0-beta.38",
-    "vuepress-theme-hope": "next"
+    "vuepress-theme-hope": "2.0.0-beta.47"
   },
   "dependencies": {
     "element-plus": "latest",
