--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "docs:vite": "vuepress  build docs",
-    "docs:build": "vuepress build docs",
+    "docs:build": "vuepress build docs --clean-cache",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs  "
+    "docs:dev": "vuepress dev docs  --clean-cache"
   },
   "devDependencies": {
     "@vuepress/plugin-docsearch": "next",
