--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn
 
       - name: Build VuePress site
-        run: yarn docs:build
+        run: export NODE_OPTIONS=--max_old_space_size=4096&&yarn docs:build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
