--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "docs:vite": "vuepress  build docs",
     "docs:build": "vuepress-webpack build docs --clean-cache",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs  --clean-cache"
+    "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
+    "docs:dev": "vuepress-vite dev docs  --clean-cache"
   },
   "devDependencies": {
     "@vuepress/plugin-docsearch": "next",
     "vuepress": "next",
+    "vuepress-vite": "next",
     "sass-loader": "latest",
     "sass": "latest",
     "vuepress-webpack": "next",
