--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docs:vite": "vuepress  build docs",
     "docs:build": "vuepress-webpack build docs --clean-cache",
-    "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
+    "docs:clean-dev": "vuepress  dev docs --clean-cache",
     "docs:dev": "vuepress-vite dev docs  --clean-cache"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "sass-loader": "latest",
     "sass": "latest",
     "vuepress-webpack": "next",
+    "artplayer": "latest",
     "vuepress-theme-hope": "next"
   },
   "dependencies": {
