--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@vuepress/plugin-docsearch": "2.0.0-beta.49",
     "vuepress": "2.0.0-beta.49",
     "@vuepress/cli": "2.0.0-beta.49",
-    "@vuepress/client": "2.0.0-beta.49","vuepress-shared":"2.0.0-beta.87",
+    "@vuepress/client": "2.0.0-beta.49", 
     "@vuepress/utils": "2.0.0-beta.49",
+    "vuepress-shared":"2.0.0-beta.91",
     "vue": "3.2.37",
     "@vueuse/core": "9.0.0",
     "vuepress-vite": "2.0.0-beta.49",
@@ -22,7 +23,7 @@
     "sass-loader": "13.0.2",
     "sass": "1.54.0",
     "vuepress-webpack": "2.0.0-beta.49",
-    "vuepress-theme-hope": "2.0.0-beta.87"
+    "vuepress-theme-hope": "2.0.0-beta.91"
   },
   "dependencies": {
     "element-plus": "2.2.11",
