--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@vuepress/plugin-docsearch": "2.0.0-beta.49",
     "vuepress": "2.0.0-beta.49",
     "@vuepress/cli": "2.0.0-beta.49",
-    "@vuepress/client": "2.0.0-beta.49", 
+    "@vuepress/client": "2.0.0-beta.49",
     "@vuepress/utils": "2.0.0-beta.49",
-    "vuepress-shared":"2.0.0-beta.91",
+    "vuepress-shared": "2.0.0-beta.91",
+    "@vuepress/plugin-prismjs": "2.0.0-beta.49",
     "vue": "3.2.37",
     "@vueuse/core": "9.0.0",
     "vuepress-vite": "2.0.0-beta.49",
-     
     "sass-loader": "13.0.2",
     "sass": "1.54.0",
     "vuepress-webpack": "2.0.0-beta.49",
