--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pc documents",
   "license": "MIT",
   "scripts": {
-    "docs:build": "vuepress-webpack build docs --clean-cache",
+    "docs:build": "vuepress-vite build docs --clean-cache",
     "docs:clean-dev": "vuepress-vite  dev docs --clean-cache",
     "docs:dev": "vuepress-vite dev docs ",
     "docs:vite": "vuepress  build docs"
@@ -15,19 +15,19 @@
     "highlight.js": "11.6.0"
   },
   "devDependencies": {
-    "@vuepress/cli": "2.0.0-beta.49",
-    "@vuepress/client": "2.0.0-beta.49",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.49",
-    "@vuepress/plugin-prismjs": "2.0.0-beta.49",
-    "@vuepress/utils": "2.0.0-beta.49",
+    "@vuepress/cli": "2.0.0-beta.51",
+    "@vuepress/client": "2.0.0-beta.51",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.51",
+    "@vuepress/plugin-prismjs": "2.0.0-beta.51",
+    "@vuepress/utils": "2.0.0-beta.51",
     "@vueuse/core": "9.0.0",
     "sass": "1.54.0",
     "sass-loader": "13.0.2",
     "vue": "3.2.37",
-    "vuepress": "2.0.0-beta.49",
-    "vuepress-shared": "2.0.0-beta.91",
-    "vuepress-theme-hope": "2.0.0-beta.91",
-    "vuepress-vite": "2.0.0-beta.49",
-    "vuepress-webpack": "2.0.0-beta.49"
+    "vuepress": "2.0.0-beta.51",
+    "vuepress-shared": "2.0.0-beta.99",
+    "vuepress-theme-hope": "2.0.0-beta.99",
+    "vuepress-vite": "2.0.0-beta.51",
+    "vuepress-webpack": "2.0.0-beta.51"
   }
 }
