--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -21,7 +21,8 @@ jobs:
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
-
+        with:
+          version: 10
 
       - name: 设置 Node.js
         uses: actions/setup-node@v4
